--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SuppleTrack</string>
+    <string name="get_started">Get Started</string>
+    <string name="welcome_subtitle">Welcome to SuppleTrack</string>
+    <string name="welcome_title">Welcome</string>
 </resources>
